app/globals.css
@import "tailwindcss";
@import "./components/css/Header.css";
:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

*{
  box-sizing: content-box;
}
.g-rows{
  display: grid;
  grid-template-columns: auto auto auto auto auto auto;
}


.flex-r{
  display: flex;
}

.flex-c{
  display: flex;
  flex-direction: column;
}

.flex-wrp{
  flex-wrap: wrap;
}

.center-v{
  align-items: center;
}

.center-h{
  justify-content: center;
}

.s-between{
  justify-content: space-between;
}

.center-vh{
  display: flex;
  align-items: center;
  justify-content: center;
}

.pad-t{
  padding-top: 10px;
}

.pad-b{
  padding-bottom: 10px;
}

.pad-l{
  padding-left: 10px;
}

.pad-r{
  padding-right: 10px;
}

.pad{
  padding: 10px;
}

.pad-lr{
  padding-left: 30px;
  padding-right: 30px;
}

.mrg-r{
  margin-right: 10px;
}

.mrg-l{
  margin-left: 10px;
}

.mrg-t{
  margin-top: 10px;
}

.mrg-b{
  margin-bottom: 10px;
}

.mrg{
  margin: 10px;
}

.border{
  border: 1px solid;
}

.border-radius-circle{
  border-radius: 50%;
}

.fullscreen{
  width: 100vw;
  height: 100vh;
}

.font-bold-1{
  font-weight: 600;
  font-size: 30px;
}

.paragraph-font-1{
  font-size: 18px;
}

body {
  background: #add6ff;
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  height: 100%;
}

.height-100{
  height: 100%;
}

.modal-transparent-background{
  position: absolute;
  background-color: grey;
  height: 100vh;
  width: 100vw;
  top:0;
  left:0;
  opacity: 50%;
}

.modal-content{
  position: absolute;
  top:0;
  right: 0;
  width: 33%;
  height: 100vh;
  background-color: white;
}

.close-button{
  position: relative;
  right: 0;
}

.rw-reverse{
  flex-direction: row-reverse;
}

@media(max-width: 600px){
  .hide-small-screen{
    display: none;
  }

  .height-100{
    height: 75%;
  }
}

